# edumate

./: .env  .gitignore  README.md  docker-compose.yml  nginx.conf
keycloak/user-deletion-listener/: pom.xml
keycloak/user-deletion-listener/src/main/java/com/example/edumate/: UserDeletionLintenerProviderFactory.java  (+1 more)
services/evaluation/: package.json  tsconfig.json
services/evaluation/src/: app.ts  database.ts
services/evaluation/src/api/: index.ts
services/evaluation/src/controllers/: multipleChoiceQuestion.controller.ts  writtenQuestion.controller.ts
services/evaluation/src/models/: MultipleChoiceQuestion.ts  WrittenQuestion.ts
services/evaluation/src/services/: material.ts
services/material/: package.json
services/material/src/: app.ts  database.ts  requests.ts
services/material/src/api/: index.ts
services/material/src/controllers/: course.controller.ts  lecture.controller.ts  review.controller.ts
services/material/src/models/: Course.ts  Lecture.ts  Review.ts
services/material/src/services/: minio.ts  rag.ts  transcription.ts
services/multi-modal-rag/: Dockerfile  pyproject.toml
services/multi-modal-rag/src/: dependencies.py  retriever.py  router.py
services/student-data/: .dockerignore
services/student-data/src/: app.ts  database.ts
services/student-data/src/api/: index.ts
services/student-data/src/controllers/: answer.controller.ts  progress.controller.ts
services/student-data/src/models/: Answer.ts  Progress.ts
services/transcription/: Dockerfile  main.py  pyproject.toml
services/wq-correction/: main.py  models.py  pyproject.toml
