[tool.poetry]
name = "wq-correction"
version = "0.1.0"
description = ""
authors = ["Izzeddin Ahmad <izzeddinahmad@proton.me>"]
readme = "README.md"
packages = [{include = "wq_correction"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic = "^2.10.5"
openai = "^1.59.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
